--- a/polls/templates/login.html
+++ b/polls/templates/login.html
@@ -6,8 +6,6 @@
     {% load static %}
         
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'imagenes/logo.png' %}" />
-        
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'imagenes/logo.png' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'login.css' %}">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,7 +19,7 @@
 </head>
 <body>
  
-<div class="login-container">
+<div class="login-container"style="background-color: #D9D4CC;">
    <div class="login-image"></div>
    <div class="login-form">
        <h2>Iniciar sesión</h2>
