--- a/polls/templates/signup.html
+++ b/polls/templates/signup.html
@@ -18,8 +18,8 @@
 </head>
 
 <body>
-      <div class="login-container">
-         <div class="login-image"></div>
+  <div class="login-container"style="background-color: #D9D4CC;">
+    <div class="login-image"></div>
          <div class="login-form">
             <h2>Regístrate</h2>
             <form method="post"  onsubmit="return validateForm()">
