--- a/polls/static/index.css
+++ b/polls/static/index.css
@@ -1,75 +1,269 @@
-body, html {
+*{
     margin: 0;
     padding: 0;
-    height: 100%;
-    font-family: Arial, sans-serif;
+
 }
 
-.background {
-    background-image: url('./imagenes/img1.png');
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
+/*INICIO DEL CSS MAIN */
+.main{
+    background-image: url(IMAGENES-PRO/index1.jpeg);
     background-size: cover;
-    position: relative;
-}
-
-.overlay {
-    background-color: rgba(0, 0, 0, 0.5);
-    height: 100%;
+    height: 100vh;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: white;
 }
 
-.menu {
-    position: absolute;
-    top: 20px;
-    width: 90%;
+.nav-main{
+    width: 100%;
+    height: 80px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    padding: 0 50px;
+    position: fixed;
+    background: rgb(0,0,0);
+background: linear-gradient(180deg, rgba(0,0,0,1) 68%, rgba(0,0,0,0.9822303921568627) 87%, rgba(0,0,0,0.5760679271708684) 94%, rgba(0,0,0,0.16150210084033612) 97%, rgba(0,0,0,0) 100%);
 }
-
-.menu .brand {
-    font-size: 30px;
-    font-weight: bold;
-    color: white;
-}
-
-.menu ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap: 20px;
-}
-
-.menu ul li {
-    display: inline;
-}
-
-.menu ul li a {
+.nav-main a{
     text-decoration: none;
     color: white;
-    font-size: 20px;
-    padding: 10px 20px;
-    border-radius: 5px;
-    transition: background-color 0.3s;
+    font-size: 1.6rem;
+    text-align: center;
+    margin: 30px 90px 0px 90px;
+    transition: margin-bottom 0.3s ease, color 0.3s ease, font-size 0.3s ease;
+}
+.nav-main a:hover{
+    color: white;
+    font-size: 1.8rem;
+    text-decoration: underline;
 }
 
-.menu ul li a:hover {
-    background-color: rgba(255, 255, 255, 0.6);
+.main-title{
+    width: 100%;
+    height: 85vh;
+    display: flex;
+    align-items: center; /* Center vertically */
+    justify-content: center; /* Center horizontally */
+    
+}
+.titlemain{
+    color: white;
+    font-size: 8rem;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-.centered-text {
-    z-index: 1;
-    font-size: 30px;
+.main-subtitle{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.h2-subtitle{
+    color: white;
+    font-size: 1.6rem;
+    text-align: center;
+}
+.main-footer{
+    display: flex;
+    width: 100%;
+    text-align: center;
+    background: rgb(0,0,0);
+background: linear-gradient(0deg, rgba(0,0,0,1) 72%, rgba(0,0,0,0.9822303921568627) 92%, rgba(0,0,0,0.8953956582633054) 96%, rgba(0,0,0,0) 100%);
+    position: absolute;
+    bottom: 0;
+}
+.main-footerizq{
+    color: white;
+    width: 50%;
+}
+.main-footerder{
+    color: white;
+    width: 50%;
+    margin: 14px 0px
 }
 
+/*FIN DEL CSS MAIN /*
+/*INICIO DEL CSS LAR (VIVIENDAS)*/
+
+.lar{
+    background-image: linear-gradient(to bottom, #000000, #290e1a, #481033, #671052, #81157a, #922592, #a335aa, #b344c4, #c556cd, #d668d5, #e67ade, #f68ce8);
+    height: auto;
+}
+.lar-title{
+    width: 100%;
+    text-align: center;
+    
+}
+.titlelar{
+    color: white;
+    font-size: 3rem;
+    padding: 20px 0px;
+    transition: 0.3s ease;
+}
+
+.titlelar:hover{
+    text-shadow: 0 0 5px #e0d8e0;
+    font-size: 3.2rem;
+}
+.lar-cardcontainer{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+.cardlar-container{
+    background-color: rgb(253, 250, 253);
+    width: 500px;
+    height: 700px;
+    border: 1px solid black;
+    border-radius: 30px;
+    margin: 20px auto ;
+    align-items: center;
+    justify-content: center;
+
+}
+.cardlar-img{
+    width: 100%;
+    height: 70%;
+   
+}
+.imgcardlar{
+    height: 100%;
+    width: 100%;
+    border-top-left-radius: 30px; /* Redondea la esquina superior izquierda */
+    border-top-right-radius: 30px; /* Redondea la esquina superior derecha */
+
+}
+.cardlar-title{
+    text-align: center;
+    font-size: 1rem;
+    margin: 10px;
+}
+.cardlar-subtitle{
+    margin: 0px 40px;
+    font-size: 1rem;
+}
+.cardlar-info{
+    display: flex;
+}
+.cardinfo-left{
+    width: 50%;
+    margin: 0px 20px;
+}
+.cardinfo-right{
+    width: 50%;
+}
+.btncardlard{
+    width: 100%;
+    text-align: center;
+}
+.cardbtn{
+    font-size: 1.5rem;
+    width: 60%;
+    height: 40px;
+    margin: 10px 0px;
+    border-radius: 30px;
+    transition: 0.3s ease;
+}
+.cardbtn:hover{
+    font-size: 1.7rem;
+}
+
+
+
+
+/* FIN DEL LAR*/
+/*INICIO DE PROYECTOS*/
+
+.proy{
+    width: 100%;
+    height: auto;
+    
+    background-image: linear-gradient(to bottom, #f68ce8, #e67ade, #d668d5, #c556cd, #b344c4, #a335aa, #922592, #81157a, #671052, #481033, #290e1a, #000000);   
+}
+.pro-title{
+    width: 100%;
+    text-align: center;
+    color: black;
+}
+.titleproy{
+    color: black;
+    font-size: 3rem;
+    padding: 30px 0px;
+    transition: 0.3s ease;
+}
+.titleproy:hover{
+    font-size: 3.2rem;
+    text-shadow: 0 0 5px #0e000e;
+
+}
+
+.proy-container{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+/*CARTAS*/
+.cardproy-container{
+    width: 550px;
+    height: 650px;
+    border: 1px solid black;
+    margin: 10px auto;
+    border-radius: 0 0 30px 30px; 
+    background-color: white;
+
+}
+.cardproy-img{
+    width: 100%;
+    height: 70%;
+}
+.imgproy{
+    height: 100%;
+    width: 100%;
+
+}
+.cardproy-title{
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 20px;
+    font-size: 1rem;
+
+}
+
+.cardproy-subtitle{
+    text-align: center;
+    direction: rtl;
+    font-size: 0.8rem;
+}
+.subtitleproy{
+    height: 90px;
+    overflow-y: auto;
+}
+.cardproy-info{
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 10px;
+}
+.infoizq{
+    display: flex;
+    width: 50%;
+}
+.estadoproy{
+    font-size: 1.5rem;
+    border-radius: 10px;
+    width: 100%;
+    color: black;
+    background-color:white;
+    border: 1px solid black;
+}
+.estadoproy:hover{
+    content: "me interesa";
+    background-color: black;
+    border: 1px solid black;
+    color: white;
+    transition: 0.6s ease;
+}
+.precioproy{
+    font-size: 1.6rem;
+}
 
