--- a/polls/templates/buscador.html
+++ b/polls/templates/buscador.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="auto">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,85 +7,82 @@
     {% load static %}
         
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'imagenes/logo.png' %}" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"/>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-    <div class="button-bar">
-        <h4 class="text-left">           
-            <a class="btn" href="{% url 'home' %}">Regresar</a>
-        </h4> 
-    </div>
-        <div class="container" style="padding: 50px; background-color: rgb(182, 177, 177);">
-            <div class="row justify-content-center">
-                <div class="col-md-6">
-                    <h1>Buscador de Contratos por Fecha</h1>
-                    <form id="form-busqueda"action="/buscador" method="GET">
-                        {% csrf_token %}
-                        <label for="fecha-busqueda" class="form-label">Seleccione una fecha:</label>
-                        <input type="date" id="fecha" name="fecha" class="form-control">
-                        <button type="submit" class="btn btn-primary mt-3">Buscar</button>
-                    </form>
-                </div>
+    {% include "navbar.html" %}
+    {% block content %}
+    {% endblock %}
+    <div class="container mt-4">
+        <div class="row mb-4">
+            <div class="col-md-7  container text-center ">
+                <form class="form-inline" id="form-busqueda"action="/buscador" method="GET">
+                    {% csrf_token %}
+                    <input class="form-control mr-sm-3" type="date" id="fecha" name="fecha" placeholder="Buscar contratos" aria-label="Search" >
+                    <button class="btn btn-outline-success my-1 my-sm-0" type="submit">Buscar</button>
+                </form>
             </div>
         </div>
-    
+    </div>
     <div class="container text-center">
-        <h1 style="font-size: 40px; font-family: Arial, Helvetica, sans-serif">LISTA DE CONTRATOS EN ENCONTRADOS</h1>    
-        {% if r2 %}
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                <h5>{{ r2 }}</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div> 
-        {% endif %}
+        <h1 style="font-size: 40px; font-family: Arial, Helvetica, sans-serif">LISTA DE CONTRATOS EN ENCONTRADOS</h1>   
 
         {% if pro %}
-            <p>Total de Contratos : {{ total_contratos }}</p>
-
-                <table border="3" class="table table-hover" >
-                    <tr bgcolor="#00aae4">
-                      <th>NOMBRE CONTRATO</th>
-                      <th>CLIENTE</th>
-                      <th>TRABAJADOR</th>
-                      <th>ESTADO</th>
-                      <th>VALOR</th>
-                      <th>FECHA DE CREACION DEL CONTRATO</th>
-                      <th>TIPO DE INMUEBLE </th>
-                      <th>DESCRIPCION DEL INMUEBLE</th>
-                      <th>ACCIONES</th>
-                    </tr>
-                
+        <p  class="container text-center">Total de Contratos : {{ total_contratos }}</p>
+        <div class="container">
+            <div class="row">
                 {% for x in pro %}
-
-                    <tr class="align-middle">
-                      
-                      <td>{{ x.nombre_contrato }}</td>
-                      <td>{{ x.nombre_cliente }} {{ x.apellido_cliente }}</td>
-                      <td>{{ x.nombre_trabajador }} {{ x.apellido_trabajador }}</td>
-                      <td>{{ x.estado }} </td>
-                      <td>{{ x.valor_contrato }}</td>
-                      <td>{{ x.fecha_contrato }}</td>
-                      <td>{{ x.tipo_inmueble }}</td>
-                      <td>{{ x.descripcion_inmueble }}</td>
-
-
-                        <td>
-                             <a href="/form_actualizar/{{ x.cnt_codigo }}" class="btn btn-lg" style=" border: 3px solid rgb(252, 70, 100) ;">
-                                <i class="bi bi-pencil-fill" ></i>
-                            </a>
-                            
-                            <button type="button" onClick="botonEliminar('{{ x.cnt_codigo }}')" class="btn btn-lg" style="border: 3px solid rgb(252, 70, 100);">
-                                <i class="bi bi-trash-fill"></i>
-                            </button>  
-                        </td> 
-                    </tr>
-
+                    <div class="col-md-6">
+                        <div class="card mb-5">
+                            <div class="card-body">
+                                <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
+                                    <h5 class="card-title">NOMBRE</h5>
+                                    <p class="card-text">{{ x.nombre_contrato }}</p>
+                                </div>
+                                <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
+                                    <h5 class="card-title">NOMBRE CLIENTE</h5>
+                                    <p class="card-text">{{ x.nombre_cliente }}</p>
+                                </div>
+                                <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
+                                    <h5 class="card-title">NOMBRE TRABAJADOR</h5>
+                                    <p class="card-text">{{ x.nombre_trabajador }}</p>
+                                </div>
+                                <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
+                                    <h5 class="card-title">ESTADO</h5>
+                                    <p class="card-text">{{ x.estado }}</p>
+                                </div>
+                                <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
+                                    <h5 class="card-title">VALOR</h5>
+                                    <p class="card-text">{{ x.valor_contrato }}</p>
+                                </div>
+                                <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
+                                    <h5 class="card-title">FECHA DEL CONTRATO</h5>
+                                    <p class="card-text">{{ x.fecha_contrato }}</p>
+                                </div>
+                                <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
+                                    <h5 class="card-title">TIPO DE INMUEBLE</h5>
+                                    <p class="card-text">{{ x.tipo_inmueble }}</p>
+                                </div>
+                                <div class="d-flex justify-content-between border-bottom pb-4 mb-4">
+                                    <h5 class="card-title">DESCRIPCION DEL INMUEBLE</h5>
+                                    <p class="card-text">{{ x.descripcion_inmueble }}</p>
+                                </div>
+                                <div class="cont-atributo d-flex justify-content-between">
+                                    <a href="/form_actualizar/{{ x.cnt_codigo }}" class="btn btn-primary">
+                                        <i class="bi bi-pencil-fill"></i> Editar
+                                    </a>
+                                    <button type="button" onClick="botonEliminar('{{ x.cnt_codigo }}')" class="btn btn-danger">
+                                        <i class="bi bi-trash"></i> Eliminar
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 {% endfor %}
+            </div>
+        </div>
 
-                </table>
             
         {% else %}
             <div class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -107,23 +104,10 @@
         {% endfor %}
     {% endif %}
 
-    {% block js %}
-        <script>
-            function botonEliminar(id){
-                Swal.fire({
-                    "title": "¿Estas seguro?",
-                    "text": "Esta acción no se puede deshacer",
-                    "icon": "question",
-                    "showCancelButton": true
-                })
-                .then(function(result){
-                    if(result.isConfirmed){
-                        window.location.href = "/eliminar/" + id;
-                    }
-                })
-            }
-        </script>
-    {% endblock %}
-
-</body>
+    <script src="{% static 'js/app.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+</body>       
 </html>
