--- a/polls/templates/form_registrar.html
+++ b/polls/templates/form_registrar.html
@@ -13,13 +13,11 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     </head>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-    <div class="button-bar">
-   
-        <a class="btn" href="/home">Volve a la lista</a>
-        </div>
   
 <body>
+    {% include "navbar.html" %}
+    {% block content %}
+    {% endblock %}
   <div class="container mt-5">
       <form action="/insertar" method="post">
           {% csrf_token %}
