--- a/polls/templates/listado.html
+++ b/polls/templates/listado.html
@@ -1,38 +1,89 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="auto">
     <head>
        
         <meta charset="UTF-8"/>
         {% load static %}
         <title>Lista de contratos</title>
-
+        <link rel="stylesheet" type="text/css" href="{% static 'listado.css' %}">
+        
         <link rel="shortcut icon" type="image/x-icon" href="{% static 'imagenes/logo.png' %}" />
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"/>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
-
-
-          <div class="button-bar">
-                <h4 class="text-left">           
-                    <a class="btn" href="{% url 'logout' %}">Cerrar Sesion</a>
-                    <a class="btn" href="/form_registrar">Registrar contrato</a>
-                    <a class="btn" href="/form_buscador">Buscar Contrato</a>
-                    <a id="btn-curso" class="btn">Ver Contratos en Curso</a>
-                    <a id="btn-terminado" class="btn">Ver Contratos Terminados</a>
-                    <a class="btn"href="/form_conXaño">Ver Contratos por año</a> 
-                    <a class="btn"href="/form_conXmes">Ver Contratos por mes</a>    
-
-                </h4> 
-          </div>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     </head>
 
-    <body>
-      <div class="container text-center">
-            
-        <h1 style="font-size: 40PX; font-family: Arial, Helvetica, sans-serif ">LISTA DE CONTRATOS</h1>    
-            {% if r %}
+    <body >
+        <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
+            <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center"
+                    id="bd-theme"
+                    type="button"
+                    aria-expanded="false"
+                    data-bs-toggle="dropdown"
+                    aria-label="Toggle theme (auto)">
+              <svg class="bi my-1 theme-icon-active" width="1em" height="1em"><use href="#circle-half"></use></svg>
+              <span class="visually-hidden" id="bd-theme-text">Toggle theme</span><i class="bi bi-moon-fill"></i>
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
+              <li>
+                <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light" aria-pressed="false">
+                  <svg class="bi me-2 opacity-50 theme-icon" width="1em" height="1em"><use href="#sun-fill"></use></svg>
+                  Light
+                  <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
+                </button>
+              </li>
+              <li>
+                <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark" aria-pressed="false">
+                  <svg class="bi me-2 opacity-50 theme-icon" width="1em" height="1em"><use href="#moon-stars-fill"></use></svg>
+                  Dark
+                  <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
+                </button>
+              </li>
+              <li>
+                <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="auto" aria-pressed="true">
+                  <svg class="bi me-2 opacity-50 theme-icon" width="1em" height="1em"><use href="#circle-half"></use></svg>
+                  Auto
+                  <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
+                </button>
+              </li>
+            </ul>
+        </div>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary" style="background: rgb(255, 244, 244);">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">C O N S T R U <span style="color: red;">RED</span></a>
+             
+              <div class="d-flex justify-content-between" style="font-size: 20px;" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" href="/form_buscador">Buscar Contrato</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/form_registrar">Registrar Contrato</a>
+                  </li>
+                  
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="verContratosDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Ver Contratos
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="verContratosDropdown">
+                      <li><a class="dropdown-item" href="/form_contrato/En curso/">En Curso</a></li>
+                      <li><a class="dropdown-item" href="/form_contrato/terminado/">Terminados</a></li>
+                      <li><a class="dropdown-item" href="/form_conXaño">Por año</a></li>
+                      <li><a class="dropdown-item" href="/form_conXmes">Por mes</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Cerrar sesion</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+        </nav>
+            <div class="div-titlecont">
+                <h1 class="container text-center ">LISTA DE CONTRATOS</h1>
+            </div>
+                    {% if r %}
             <script>
                 Swal.fire({
                     "title": "Felicitaciones",
@@ -52,55 +103,63 @@
                     <h5>{{ r2 }}</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div> 
+
             {% endif %}
 
-
             {% if pro %}
-            <p>Total de Contratos : {{ total_contratos }}</p>
-
-                <table border="3" class="table table-hover" >
-                    <tr bgcolor="#00aae4">
-                      <th>NOMBRE CONTRATO</th>
-                      <th>CLIENTE</th>
-                      <th>TRABAJADOR</th>
-                      <th>ESTADO</th>
-                      <th>VALOR</th>
-                      <th>FECHA DE CREACION DEL CONTRATO</th>
-                      <th>TIPO DE INMUEBLE </th>
-                      <th>DESCRIPCION DEL INMUEBLE</th>
-                      <th>ACCIONES</th>
-                    </tr>
-                
-                {% for x in pro %}
-
-                    <tr class="align-middle">
-                      
-                      <td>{{ x.nombre_contrato }}</td>
-                      <td>{{ x.nombre_cliente }} {{ x.apellido_cliente }}</td>
-                      <td>{{ x.nombre_trabajador }} {{ x.apellido_trabajador }}</td>
-                      <td>{{ x.estado }} </td>
-                      <td>{{ x.valor_contrato }}</td>
-                      <td>{{ x.fecha_contrato }}</td>
-                      <td>{{ x.tipo_inmueble }}</td>
-                      <td>{{ x.descripcion_inmueble }}</td>
-
-
-                        <td>
-                             <a href="/form_actualizar/{{ x.cnt_codigo }}" class="btn btn-lg" style=" border: 3px solid rgb(252, 70, 100) ;">
-                                <i class="bi bi-pencil-fill" ></i>
-                            </a>
-                            
-                            <button type="button" onClick="botonEliminar('{{ x.cnt_codigo }}')" class="btn btn-lg" style="border: 3px solid rgb(252, 70, 100);">
-                                <i class="bi bi-trash-fill"></i>
-                            </button>  
-                        </td> 
-                    </tr>
-
-                {% endfor %}
-
-                </table>
-            
-                
+            <p  class="container text-center">Total de Contratos : {{ total_contratos }}</p>
+            <div class="container">
+                <div class="row">
+                    {% for x in pro %}
+                        <div class="col-md-6">
+                            <div class="card mb-5">
+                                <div class="card-body">
+                                    <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
+                                        <h5 class="card-title">NOMBRE</h5>
+                                        <p class="card-text">{{ x.nombre_contrato }}</p>
+                                    </div>
+                                    <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
+                                        <h5 class="card-title">NOMBRE CLIENTE</h5>
+                                        <p class="card-text">{{ x.nombre_cliente }}</p>
+                                    </div>
+                                    <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
+                                        <h5 class="card-title">NOMBRE TRABAJADOR</h5>
+                                        <p class="card-text">{{ x.nombre_trabajador }}</p>
+                                    </div>
+                                    <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
+                                        <h5 class="card-title">ESTADO</h5>
+                                        <p class="card-text">{{ x.estado }}</p>
+                                    </div>
+                                    <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
+                                        <h5 class="card-title">VALOR</h5>
+                                        <p class="card-text">{{ x.valor_contrato }}</p>
+                                    </div>
+                                    <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
+                                        <h5 class="card-title">FECHA DEL CONTRATO</h5>
+                                        <p class="card-text">{{ x.fecha_contrato }}</p>
+                                    </div>
+                                    <div class="d-flex justify-content-between border-bottom pb-2 mb-2">
+                                        <h5 class="card-title">TIPO DE INMUEBLE</h5>
+                                        <p class="card-text">{{ x.tipo_inmueble }}</p>
+                                    </div>
+                                    <div class="d-flex justify-content-between border-bottom pb-4 mb-4">
+                                        <h5 class="card-title">DESCRIPCION DEL INMUEBLE</h5>
+                                        <p class="card-text">{{ x.descripcion_inmueble }}</p>
+                                    </div>
+                                    <div class="cont-atributo d-flex justify-content-between">
+                                        <a href="/form_actualizar/{{ x.cnt_codigo }}" class="btn btn-primary">
+                                            <i class="bi bi-pencil-fill"></i> Editar
+                                        </a>
+                                        <button type="button" onClick="botonEliminar('{{ x.cnt_codigo }}')" class="btn btn-danger">
+                                            <i class="bi bi-trash"></i> Eliminar
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
 
             {% else %}
 
@@ -110,73 +169,24 @@
                 </div>
 
             {% endif %}
-             
-
-        </div>
-      
-    </body>
-    {%  if messages %}
-    {% for m in messages %}
-      <script>
-          Swal.fire({
-              "title": "Felicidades",
-              "text" : "{{m}}",
-              "icon" : "success"
-          })
-      </script>
-      {% endfor %}
-      {% endif %}
-     
-    {% block js %}
-    <script>
-        function botonEliminar(id){
+        {%  if messages %}
+        {% for m in messages %}
+        <script>
             Swal.fire({
-                "title": "¿Estas seguro?",
-                "text": "Esta accion no se puede deshacer",
-                "icon": "question",
-                "showCancelButton": true
-            }).then(function(result){
-                if(result.isConfirmed){
-                    window.location.href = "/eliminar/"+id;
-                }
+                "title": "Felicidades",
+                "text" : "{{m}}",
+                "icon" : "success"
             })
-        }
-
-        $(document).ready(function(){
-            // Maneja el clic en el botón "Ver Contratos en Curso"
-            $('#btn-curso').click(function(){
-                cargarContratos('en curso');
-            });
-
-            // Maneja el clic en el botón "Ver Contratos Terminados"
-            $('#btn-terminado').click(function(){
-                cargarContratos('Terminado');
-            });
-            
-            function cargarContratos(estado) {
-                $.ajax({
-                    url: `/form_contrato/${estado}/`,
-                    method: 'GET',
-                    success: function(data) {
-                        window.location.href = `/form_contrato/${estado}/`;
-                    },
-                    error: function(xhr, status, error) {
-                        console.error(error);
-                        Swal.fire({
-                            "title": "Error",
-                            "text": "Hubo un problema al cargar los contratos",
-                            "icon": "error"
-                        });
-                    }
-                });
-            }
-        });
-    </script>
-    {% endblock %}
-      
+        </script>
+        {% endfor %}
+        {% endif %}
         
-            
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-
-           
+        {% block js %}
+  
+        {% endblock %}
+        <script src="{% static 'js/app.js' %}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
+</body>       
 </html>
